@@ -27,6 +27,7 @@ Bug Fixes::
 * don't add entry to TOC for notitle section if no content follows it
 * look for block align roles on image instead of text align roles (#2176)
 * use correct left value when creating bounding box
+* don't apply border on block images to logo image on title page
 
 == 2.0.0.beta.2 (2022-05-14) - @mojavelinux
 
